--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet"
   />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+  />
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
 <!--header-->
 <header>
-  <nav>
-    <a href="./index.html" class="logo">
-      Web<span class="accent">Studio</span>
-    </a>
-    <ul class="site-nav list">
-      <li><a href="" class="link">Студия</a></li>
-      <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-      <li><a href="" class="link">Контакты</a></li>
+  <div class="conteiner">
+    <nav>
+      <a href="./index.html" class="logo">
+        Web<span class="accent">Studio</span>
+      </a>
+      <ul class="site-nav list">
+        <li><a href="" class="link">Студия</a></li>
+        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li><a href="" class="link">Контакты</a></li>
+      </ul>
+    </nav>
+    <ul class="site-contacts list">
+      <li><a href="" class="link">info@devstudio.com</a></li>
+      <li><a href="" class="link">+38 096 111 11 11</a></li>
     </ul>
-
-  </nav>
-  <ul class="site-contacts list">
-    <li><a href="" class="link">info@devstudio.com</a></li>
-    <li><a href="" class="link">+38 096 111 11 11</a></li>
-  </ul>
+  </div>
 </header>
 
 <main>
@@ -39,84 +44,91 @@
 
   <!--преимущества студии-->
   <section class="features">
-    <h2>Преимущества студии</h2>
-    <ul class="features list">
-      <li>
-        <h3 class="title">Внимание к деталям</h3>
-        <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-      </li>
-      <li>
-        <h3 class="title">Пунктуальность</h3>
-        <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-      </li>
-      <li>
-        <h3 class="title">Планирование</h3>
-        <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-      </li>
-      <li>
-        <h3 class="title">Современные технологии</h3>
-        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-      </li>
-    </ul>
+    <div class="conteiner">
+      <h2 class="section-title">Преимущества студии</h2>
+      <ul class="features list">
+        <li>
+          <h3 class="title">Внимание к деталям</h3>
+          <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        </li>
+        <li>
+          <h3 class="title">Пунктуальность</h3>
+          <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        </li>
+        <li>
+          <h3 class="title">Планирование</h3>
+          <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+        </li>
+        <li>
+          <h3 class="title">Современные технологии</h3>
+          <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <!--чем мы занимаемся-->
   <section class="job">
-    <h2 class="job-title">Чем мы занимаемся</h2>
-    <ul class="list">
-      <li>
-        <a href=""><img src="./img/sec2_img1.jpg" alt="написание кода" width="370"></a>
-      </li>
-      <li>
-        <a href=""><img src="./img/sec2_img2.jpg" alt="разработка приложений для мобильных устройств" width="370"></a>
-      </li>
-      <li>
-        <a href=""><img src="./img/sec2_img3.jpg" alt="игровое приложение" width="370"></a>
-      </li>
-    </ul>
+    <div class="conteiner">
+      <h2 class="section-title">Чем мы занимаемся</h2>
+      <ul class="list">
+        <li>
+          <a href=""><img src="./img/sec2_img1.jpg" alt="написание кода" width="370"></a>
+        </li>
+        <li>
+          <a href=""><img src="./img/sec2_img2.jpg" alt="разработка приложений для мобильных устройств" width="370"></a>
+        </li>
+        <li>
+          <a href=""><img src="./img/sec2_img3.jpg" alt="игровое приложение" width="370"></a>
+        </li>
+      </ul>
+    </div>
   </section>
 
   <!--наша команда-->
   <section class="team">
-    <h2 class="team-title">Наша команда</h2>
-    <ul class="team-list list">
-      <li>
-        <img src="./img/sec3_img1.jpg" alt="Игорь Демьяненко" width="270">
-        <h3 class="title">Игорь Демьяненко</h3>
-        <p class="text">Product Designer</p>
-      </li>
-      <li>
-        <img src="./img/sec3_img2.jpg" alt="Ольга Репина" width="270">
-        <h3 class="title">Ольга Репина</h3>
-        <p class="text">Frontend Developer</p>
-      </li>
-      <li>
-        <img src="./img/sec3_img3.jpg" alt="Николай Тарасов" width="270">
-        <h3 class="title">Николай Тарасов</h3>
-        <p class="text">Marketing</p>
-      </li>
-      <li>
-        <img src="./img/sec3_img4.jpg" alt="Михаил Ермаков" width="270">
-        <h3 class="title">Михаил Ермаков</h3>
-        <p class="text">UI Designer</p>
-      </li>
-    </ul>
+    <div class="conteiner">
+      <h2 class="section-title">Наша команда</h2>
+      <ul class="team-list list">
+        <li>
+          <img class="img" src="./img/sec3_img1.jpg" alt="Игорь Демьяненко" width="270">
+          <h3 class="title">Игорь Демьяненко</h3>
+          <p class="text">Product Designer</p>
+        </li>
+        <li>
+          <img class="img" src="./img/sec3_img2.jpg" alt="Ольга Репина" width="270">
+          <h3 class="title">Ольга Репина</h3>
+          <p class="text">Frontend Developer</p>
+        </li>
+        <li>
+          <img class="img" src="./img/sec3_img3.jpg" alt="Николай Тарасов" width="270">
+          <h3 class="title">Николай Тарасов</h3>
+          <p class="text">Marketing</p>
+        </li>
+        <li>
+          <img class="img" src="./img/sec3_img4.jpg" alt="Михаил Ермаков" width="270">
+          <h3 class="title">Михаил Ермаков</h3>
+          <p class="text">UI Designer</p>
+        </li>
+      </ul>
+    </div>
   </section>
 </main>
 
 <!--footer-->
 <footer>
-  <a href="./index.html" class="logo">
-    Web<span class="accent-footer">Studio</span>
-  </a>
-  <address class="address">
-    г. Киев, пр-т Леси Украинки, 26
-  </address>
-  <ul class="list">
-    <li><a href="" class="footer-contacts">info@example.com</a></li>
-    <li><a href="" class="footer-contacts">+38 099 111 11 11</a></li>
-  </ul>
-
+  <div class="conteiner">
+    <a href="./index.html" class="logo">
+      Web<span class="accent-footer">Studio</span>
+    </a>
+    <address class="address">
+      г. Киев, пр-т Леси Украинки, 26
+    </address>
+    <ul class="list">
+      <li><a href="" class="footer-contacts">info@example.com</a></li>
+      <li><a href="" class="footer-contacts">+38 099 111 11 11</a></li>
+    </ul>
+  </div>
 </footer>
 
 </body>
