--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
 
 <!--header-->
 <header>
-  <div class="conteiner">
-    <nav>
+  <div class="conteiner main-nav">
+    <nav class="main-nav">
       <a href="./index.html" class="logo">
         Web<span class="accent">Studio</span>
       </a>
       <ul class="site-nav list">
-        <li><a href="" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a href="" class="link">Контакты</a></li>
+        <li class="item"><a href="" class="link">Студия</a></li>
+        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li class="item"><a href="" class="link">Контакты</a></li>
       </ul>
     </nav>
     <ul class="site-contacts list">
-      <li><a href="" class="link">info@devstudio.com</a></li>
-      <li><a href="" class="link">+38 096 111 11 11</a></li>
+      <li class="item"><a href="" class="link">info@devstudio.com</a></li>
+      <li class="item"><a href="" class="link">+38 096 111 11 11</a></li>
     </ul>
   </div>
 </header>
@@ -47,19 +47,19 @@
     <div class="conteiner">
       <h2 class="section-title">Преимущества студии</h2>
       <ul class="features list">
-        <li>
+        <li class="item">
           <h3 class="title">Внимание к деталям</h3>
           <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
-        <li>
+        <li class="item">
           <h3 class="title">Пунктуальность</h3>
           <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
         </li>
-        <li>
+        <li class="item">
           <h3 class="title">Планирование</h3>
           <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
         </li>
-        <li>
+        <li class="item">
           <h3 class="title">Современные технологии</h3>
           <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
@@ -71,14 +71,14 @@
   <section class="job">
     <div class="conteiner">
       <h2 class="section-title">Чем мы занимаемся</h2>
-      <ul class="list">
-        <li>
+      <ul class="job-list list">
+        <li class="item">
           <a href=""><img src="./img/sec2_img1.jpg" alt="написание кода" width="370"></a>
         </li>
-        <li>
+        <li class="item">
           <a href=""><img src="./img/sec2_img2.jpg" alt="разработка приложений для мобильных устройств" width="370"></a>
         </li>
-        <li>
+        <li class="item">
           <a href=""><img src="./img/sec2_img3.jpg" alt="игровое приложение" width="370"></a>
         </li>
       </ul>
@@ -90,22 +90,22 @@
     <div class="conteiner">
       <h2 class="section-title">Наша команда</h2>
       <ul class="team-list list">
-        <li>
+        <li class="item">
           <img class="img" src="./img/sec3_img1.jpg" alt="Игорь Демьяненко" width="270">
           <h3 class="title">Игорь Демьяненко</h3>
           <p class="text">Product Designer</p>
         </li>
-        <li>
+        <li class="item">
           <img class="img" src="./img/sec3_img2.jpg" alt="Ольга Репина" width="270">
           <h3 class="title">Ольга Репина</h3>
           <p class="text">Frontend Developer</p>
         </li>
-        <li>
+        <li class="item">
           <img class="img" src="./img/sec3_img3.jpg" alt="Николай Тарасов" width="270">
           <h3 class="title">Николай Тарасов</h3>
           <p class="text">Marketing</p>
         </li>
-        <li>
+        <li class="item">
           <img class="img" src="./img/sec3_img4.jpg" alt="Михаил Ермаков" width="270">
           <h3 class="title">Михаил Ермаков</h3>
           <p class="text">UI Designer</p>
