--- a/portfolio.html
+++ b/portfolio.html
@@ -12,21 +12,21 @@
 <body>
 
 <!--header-->
-<header class="header-portfolio">
-  <div class="conteiner">
-    <nav>
+<header>
+  <div class="conteiner main-nav">
+    <nav class="main-nav">
       <a href="./index.html" class="logo">
         Web<span class="accent">Studio</span>
       </a>
       <ul class="site-nav list">
-        <li><a href="" class="link">Студия</a></li>
-        <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-        <li><a href="" class="link">Контакты</a></li>
+        <li class="item"><a href="" class="link">Студия</a></li>
+        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+        <li class="item"><a href="" class="link">Контакты</a></li>
       </ul>
     </nav>
     <ul class="site-contacts list">
-      <li><a href="" class="link">info@devstudio.com</a></li>
-      <li><a href="" class="link">+38 096 111 11 11</a></li>
+      <li class="item"><a href="" class="link">info@devstudio.com</a></li>
+      <li class="item"><a href="" class="link">+38 096 111 11 11</a></li>
     </ul>
   </div>
 </header>
