--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <address class="address">
       г. Киев, пр-т Леси Украинки, 26
     </address>
-    <ul class="list">
-      <li><a href="" class="footer-contacts">info@example.com</a></li>
-      <li><a href="" class="footer-contacts">+38 099 111 11 11</a></li>
+    <ul class="footer-contacts list">
+      <li class="item"><a href="" class="footer-link">info@example.com</a></li>
+      <li class="item"><a href="" class="footer-link">+38 099 111 11 11</a></li>
     </ul>
   </div>
 </footer>
